# support-watcher

./: Cargo.toml  Dockerfile  LICENSE  README.md  upload-new-docker-image.sh
deployment/: docker-compose.yaml
development/: compose.yaml  prometheus.yaml
src/: main.rs  slack.rs
