[package]
name = "support-watcher"
description = "Prometheus metrics for the Helper Heidi"
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
argh = "0.1.13"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = "1.0.219"
